examples/datalog/10_edge_cases/37_large_result.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_large_result
Knowledge graph 'test_large_result' created.
Switched to knowledge graph: test_large_result
> .kg use test_large_result
Switched to knowledge graph: test_large_result
> +nums[(1,), (2,), (3,), (4,), (5,), (6,), (7,), (8,), (9,), (10,)].
Inserted 10 fact(s) into 'nums'.
> +product(X, Y) :- nums(X), nums(Y).
Rule 'product' registered.
> +prod_count(<COUNT:X>) :- product(X, _).
Script error: Parse error: Invalid term: '<COUNT:X>'
